test/expressions/casts/CastCArrayToCPtr-multiple.53.good
CastCArrayToCPtr-multiple.chpl:64: error: cast of c_array to c_ptr with a different element type
